--- a/Surseed/Surseed/Surseed.csproj
+++ b/Surseed/Surseed/Surseed.csproj
@@ -293,6 +293,8 @@
     <Content Include="Views\Organisation\Donors.cshtml" />
     <Content Include="Views\Organisation\MessageBoard.cshtml" />
     <Content Include="Views\Organisation\Reports.cshtml" />
+    <Content Include="Views\Home\SignIn.cshtml" />
+    <Content Include="Views\Home\SignUp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
