--- a/Surseed/Surseed/Surseed.csproj
+++ b/Surseed/Surseed/Surseed.csproj
@@ -206,6 +206,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Datalayer.cs" />
+    <Compile Include="Models\OrganisitaionModel.cs" />
     <Compile Include="Models\Property.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -825,6 +826,7 @@
     <Folder Include="img\" />
     <Folder Include="js\" />
     <Folder Include="vendors\" />
+    <Folder Include="Views\OrganisationModel\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
