--- a/Surseed/Surseed/Web.config
+++ b/Surseed/Surseed/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Surseed-20190821102141.mdf;Initial Catalog=aspnet-Surseed-20190821102141;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ConString" connectionString="Data Source=ADMIN-118;Initial Catalog=YourWorldWithin;Persist Security Info=True;User ID=sa;Password=sql@2014" providerName="System.Data.EntityClient" />
+    <add name="ConString" connectionString="Data Source=ADMIN-118;Initial Catalog=Surseed;Persist Security Info=True;User ID=sa;Password=sql@2014" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
