--- a/Surseed/Surseed/Surseed.csproj
+++ b/Surseed/Surseed/Surseed.csproj
@@ -1952,6 +1952,7 @@
     <Content Include="Views\Admin\SliderList.cshtml" />
     <Content Include="Views\Admin\Subscriber.cshtml" />
     <Content Include="Views\Shared\_sidebar.cshtml" />
+    <Content Include="Views\Organisation\UserList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
