--- a/Surseed/Surseed/Surseed.csproj
+++ b/Surseed/Surseed/Surseed.csproj
@@ -1885,7 +1885,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -1952,7 +1954,9 @@
     <Content Include="Views\Admin\SliderList.cshtml" />
     <Content Include="Views\Admin\Subscriber.cshtml" />
     <Content Include="Views\Shared\_sidebar.cshtml" />
+    <Content Include="Views\Organisation\List.cshtml" />
     <Content Include="Views\Organisation\UserList.cshtml" />
+    <Content Include="Views\Organisation\donordetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
