--- a/Surseed/Surseed/Web.config
+++ b/Surseed/Surseed/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Surseed-20190821102141.mdf;Initial Catalog=aspnet-Surseed-20190821102141;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="ConString" connectionString="Data Source=ADMIN-118;Initial Catalog=SurSeed;Persist Security Info=True;User ID=sa;Password=sql@2014" providerName="System.Data.EntityClient" />
+    <!--<add name="ConString" connectionString="Data Source=ADMIN-118;Initial Catalog=SurSeed;Persist Security Info=True;User ID=sa;Password=sql@2014" providerName="System.Data.EntityClient" />-->
+    <add name="ConString" connectionString="Data Source=148.72.232.167;Initial Catalog=surseed;Persist Security Info=True;User ID=surseed;Password=server@123" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,6 +21,8 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <customErrors mode="Off"></customErrors>
+    <trust level="Full"></trust>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
@@ -88,10 +91,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <system.codedom>
+  <!--<system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
-  </system.codedom>
+  </system.codedom>-->
 </configuration>
